# docminer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yml
docker/: Dockerfile
src/docminer/: __init__.py
src/docminer/analysis/: __init__.py  keywords.py  similarity.py  summarizer.py
src/docminer/api/: __init__.py  app.py  routes.py  schemas.py
src/docminer/classification/: __init__.py  classifier.py  features.py  labels.py
src/docminer/cli/: main.py
src/docminer/config/: __init__.py  loader.py  schema.py
src/docminer/core/: __init__.py  pipeline.py  types.py
src/docminer/entities/: __init__.py  linker.py  patterns.py  recognizer.py
src/docminer/extraction/: __init__.py  base.py  image.py  ocr.py  pdf.py  table.py
src/docminer/layout/: __init__.py  analyzer.py  geometry.py  regions.py
src/docminer/output/: __init__.py  formatter.py  schema.py
src/docminer/preprocessing/: __init__.py  cleaning.py  image_prep.py
src/docminer/storage/: __init__.py  backend.py  models.py
src/docminer/utils/: file_utils.py  text_utils.py
tests/: conftest.py
tests/test_analysis/: __init__.py  test_analysis.py
tests/test_api/: test_routes.py
tests/test_classification/: __init__.py  test_classifier.py
tests/test_entities/: __init__.py  test_recognizer.py
tests/test_extraction/: __init__.py  test_extractors.py
tests/test_layout/: __init__.py  test_analyzer.py
tests/test_output/: __init__.py  test_formatter.py
