[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docminer"
version = "0.2.0"
description = "Document intelligence pipeline — extract, classify, and analyse PDFs, images, and scanned documents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "DocMiner Contributors" },
]
keywords = [
    "document",
    "ocr",
    "pdf",
    "extraction",
    "nlp",
    "classification",
    "ner",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pydantic>=2.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "networkx>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]
cv = [
    "opencv-python>=4.8.0",
]

[project.scripts]
docminer = "docminer.cli.main:main"

[project.urls]
Homepage = "https://github.com/peteroyce/docminer"
Repository = "https://github.com/peteroyce/docminer"
Issues = "https://github.com/peteroyce/docminer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docminer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "configs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["docminer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "-q",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/docminer"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
